--- a/templates/base.html
+++ b/templates/base.html
@@ -9,26 +9,21 @@
           href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
           integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
           crossorigin="anonymous">
+    <!-- Boxicons -->
+    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
     {% load static %}
     <link rel="stylesheet" href="{% static "css/styles.css" %}">
 </head>
 <body>
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-sm-2">
+    {% block header %}
+      {% include 'includes/header.html' %}
+    {% endblock %}
 
-            {% block sidebar %}
-                {% include "includes/sidebar.html" %}
-            {% endblock %}
+    <main class="container mt-4">
+        {% block content %}
+        {% endblock %}
+    </main>
 
-        </div>
-        <div class="col-sm-10 ">
-
-            {% block content %}{% endblock %}
-
-        </div>
-    </div>
-</div>
 </body>
 
 </html>
