--- a/templates/base.html
+++ b/templates/base.html
@@ -1,29 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     {% block title %}<title>Taskhub</title>{% endblock %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap 4.5.3 CSS -->
     <link rel="stylesheet"
           href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
           integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
           crossorigin="anonymous">
+
     <!-- Boxicons -->
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
+
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
     {% load static %}
     <link rel="stylesheet" href="{% static "css/styles.css" %}">
 </head>
 <body>
+
     {% block header %}
       {% include 'includes/header.html' %}
     {% endblock %}
 
-    <main class="container mt-4">
-        {% block content %}
-        {% endblock %}
-    </main>
+    <div class="container-fluid mt-4">
+      <div class="row">
+        <main class="col-12 col-xl-9">
+          {% block content %}{% endblock %}
+        </main>
+        <aside class="col-12 col-xl-3">
+          {% block sidebar %}sidebar{% endblock %}
+        </aside>
+      </div>
+    </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ho+j7jyWK8fNQe+A12hVt6AzpxlF4nHCc+9lGGOU1o9ZPz5J3UJg7v4Q+WvQ8mTC"
+            crossorigin="anonymous"></script>
 </body>
-
 </html>
