--- a/templates/includes/task_card.html
+++ b/templates/includes/task_card.html
@@ -1,3 +1,4 @@
+<a href="{% url 'tasks:task-detail' pk=task.id %}">
 <div class='task' draggable='true'>
   <div class='task__tags'>
     <span class='task__tag task__tag--copyright'>{{ task.task_type }}</span>
@@ -17,3 +18,4 @@
       "></span>
     </div>
 </div>
+</a>
