--- a/templates/tasks/task_list.html
+++ b/templates/tasks/task_list.html
@@ -64,6 +64,7 @@
 {% endblock %}
 
 {% block sidebar %}
-{% include "includes/search_form.html" %}
+  {% include "includes/search_form.html" %}
+  <a href="{% url 'tasks:task-create' %}">Create</a>
 {% endblock %}
 
