--- a/templates/tasks/task_detail.html
+++ b/templates/tasks/task_detail.html
@@ -34,7 +34,7 @@
   </div>
 
   <div class="d-flex gap-2">
-    <a href="#" class="btn btn-danger w-100">Delete</a>
-    <a href="#" class="btn btn-secondary w-100">Update</a>
+    <a href="{% url 'tasks:task-delete' pk=task.id %}" class="btn btn-danger w-100">Delete</a>
+    <a href="{% url 'tasks:task-update' pk=task.id %}" class="btn btn-secondary w-100">Update</a>
   </div>
 {% endblock %}
