--- a/templates/tasks/worker_list.html
+++ b/templates/tasks/worker_list.html
@@ -3,7 +3,7 @@
 {% block content %}
     <h1>
       Workers List
-      <a href="" class="btn btn-primary link-to-page">
+      <a href="{% url 'tasks:worker-create' %}" class="btn btn-primary link-to-page">
         Create
       </a>
     </h1>
