--- a/templates/tasks/worker_form.html
+++ b/templates/tasks/worker_form.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h1>Create worker</h1>
+  <h1>{{ object|yesno:"Update,Create" }} worker</h1>
   <form action="" method="post" novalidate>
     {% csrf_token %}
     {{ form }}
