--- a/templates/tasks/worker_list.html
+++ b/templates/tasks/worker_list.html
@@ -21,7 +21,7 @@
     {% for worker in worker_list %}
       <tr>
         <td>{{ worker.id }}</td>
-        <td><a href="{{ worker.get_absolute_url }}">{{ worker.username }} {% if user == worker %} (Me){% endif %}</a></td>
+        <td><a href="{% url 'tasks:worker-detail' pk=worker.id %}">{{ worker.username }} {% if user == worker %} (Me){% endif %}</a></td>
         <td>{{ worker.first_name }}</td>
         <td>{{ worker.last_name }}</td>
         <td>{{ worker.position }}</td>
