--- a/templates/tasks/task_confirm_delete.html
+++ b/templates/tasks/task_confirm_delete.html
@@ -6,5 +6,6 @@
     {% csrf_token %}
 
     <input type="submit" value="Yes" class="btn btn-danger">
+    <a href="javascript:history.back()" class="btn btn-secondary ml-2">No</a>
   </form>
 {% endblock %}
