--- a/templates/includes/search_form.html
+++ b/templates/includes/search_form.html
@@ -1,4 +1,8 @@
-<form action="" method="get">
-  {{ search_form }}
-  <input type="submit" value="Search">
+<form action="" method="get" class="d-flex align-items-center mb-4">
+  <div class="mr-3 flex-grow-1">
+    {{ search_form }}
+  </div>
+  <button type="submit" class="reg-btn">
+    <i class="bx bx-search"></i> Search
+  </button>
 </form>
