--- a/templates/tasks/task_list.html
+++ b/templates/tasks/task_list.html
@@ -5,58 +5,72 @@
 {% block content %}
   {% if task_list %}
     <div class='project-tasks'>
-      <div class='project-column'>
-        <div class='project-column-heading'>
-          <h2 class='project-column-heading__title'>Task ToDo</h2>
-          <button class='project-column-heading__options'>
+      <div class="project-column">
+        <div class="project-column-heading">
+          <h2 class="project-column-heading__title">ToDo</h2>
+          <button class="project-column-heading__options">
             <i class="fas fa-ellipsis-h"></i>
           </button>
-        </div>
-          {% for task in todo_tasks %}
-            {% include "includes/task_card.html" %}
-            {% empty %}
-              <p>No tasks in To Do</p>
-          {% endfor %}
-        </div>
-      <div class='project-column'>
-        <div class='project-column-heading'>
-          <h2 class='project-column-heading__title'>In Progress</h2>
-          <button class='project-column-heading__options'>
+      </div>
+
+      <div class="task-list">
+        {% for task in todo_tasks %}
+          {% include "includes/task_card.html" %}
+        {% empty %}
+          <p>No tasks in To Do</p>
+        {% endfor %}
+      </div>
+      </div>
+      <div class="project-column">
+        <div class="project-column-heading">
+          <h2 class="project-column-heading__title">In Progress</h2>
+          <button class="project-column-heading__options">
             <i class="fas fa-ellipsis-h"></i>
           </button>
-        </div>
-          {% for task in in_progress_tasks %}
-            {% include "includes/task_card.html" %}
-            {% empty %}
-              <p>No tasks in progress</p>
-          {% endfor %}
-        </div>
-      <div class='project-column'>
-        <div class='project-column-heading'>
-          <h2 class='project-column-heading__title'>Needs Review</h2>
-          <button class='project-column-heading__options'>
+      </div>
+
+      <div class="task-list">
+        {% for task in in_progress_tasks %}
+          {% include "includes/task_card.html" %}
+        {% empty %}
+          <p>No tasks in progress</p>
+        {% endfor %}
+      </div>
+      </div>
+      <div class="project-column">
+        <div class="project-column-heading">
+          <h2 class="project-column-heading__title">Needs Review</h2>
+          <button class="project-column-heading__options">
             <i class="fas fa-ellipsis-h"></i>
           </button>
-        </div>
-          {% for task in needs_review_tasks %}
-            {% include "includes/task_card.html" %}
-            {% empty %}
-              <p>No tasks needs review</p>
-          {% endfor %}
-        </div>
-      <div class='project-column'>
-        <div class='project-column-heading'>
-          <h2 class='project-column-heading__title'>Done</h2>
-          <button class='project-column-heading__options'>
+      </div>
+
+      <div class="task-list">
+        {% for task in needs_review_tasks %}
+          {% include "includes/task_card.html" %}
+        {% empty %}
+          <p>No tasks needs review</p>
+        {% endfor %}
+      </div>
+      </div>
+
+      <div class="project-column">
+        <div class="project-column-heading">
+          <h2 class="project-column-heading__title">Done</h2>
+          <button class="project-column-heading__options">
             <i class="fas fa-ellipsis-h"></i>
           </button>
-        </div>
-          {% for task in done_tasks %}
-            {% include "includes/task_card.html" %}
-            {% empty %}
-              <p>No tasks is Done</p>
-          {% endfor %}
-        </div>
+      </div>
+
+      <div class="task-list">
+        {% for task in done_tasks %}
+          {% include "includes/task_card.html" %}
+        {% empty %}
+          <p>No tasks is done</p>
+        {% endfor %}
+      </div>
+      </div>
+
     </div>
   {% else %}
       <p>There are no tasks in the service.</p>
@@ -66,6 +80,6 @@
 {% block sidebar %}
   {% include "includes/clocks.html" %}
   {% include "includes/search_form.html" %}
-  <a href="{% url 'tasks:task-create' %}">Create</a>
+  <a href="{% url 'tasks:task-create' %}" class="reg-btn">Create</a>
 {% endblock %}
 
