--- a/templates/includes/task_card.html
+++ b/templates/includes/task_card.html
@@ -1,5 +1,5 @@
 <a href="{% url 'tasks:task-detail' pk=task.id %}">
-<div class='task' draggable='true'>
+<div class='task'>
   <div class='task__tags'>
     <span class='task__tag task__tag--copyright'>{{ task.task_type }}</span>
     <button class='task__options'><i class="fas fa-ellipsis-h"></i></button>
