--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -387,3 +387,34 @@ li{
   font-family: monospace;
   letter-spacing: 1px;
 }
+
+.table-wrapper {
+  overflow: hidden;
+  border-radius: 1.5rem;
+  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
+  border: 2px solid rgba(255, 255, 255, 0.3);
+}
+
+.table-header-gradient {
+  background-image: linear-gradient(180deg, #fe675c, #fd267d);
+  color: white;
+  transition: background-image 0.4s ease;
+}
+
+.table-header-gradient th:first-child {
+  border-top-left-radius: 1.5rem;
+}
+.table-header-gradient th:last-child {
+  border-top-right-radius: 1.5rem;
+}
+
+table.styled-table {
+  margin-bottom: 0;
+  border-collapse: separate;
+  border-spacing: 0;
+}
+
+.styled-table td, .styled-table th {
+  padding: 1rem;
+  vertical-align: middle;
+}
