--- a/templates/base.html
+++ b/templates/base.html
@@ -55,5 +55,6 @@
   updateClock();
   setInterval(updateClock, 1000);
 </script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
