--- a/templates/tasks/worker_form.html
+++ b/templates/tasks/worker_form.html
@@ -1,11 +1,38 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block content %}
-  <h1>{{ object|yesno:"Update,Create" }} worker</h1>
-  <form action="" method="post" novalidate>
+<div class="registration-form">
+  <form method="post" novalidate>
     {% csrf_token %}
-    {{ form }}
+     <h2 class="">
+      {% if form.instance.pk %}
+        Update Worker Info
+        {% else %}
+        Create Worker
+      {% endif %}
+    </h2>
 
-    <input type="submit" value="Submit" class="btn btn-primary">
+    {% for field in form %}
+      <div class="form-group">
+    {% if field.name == "position" or field.name == "password" %}
+      <label for="{{ field.id_for_label }}">{{ field.label }}</label>
+    {% endif %}
+    {{ field }}
+    {% if field.errors %}
+      <div class="text-danger small">{{ field.errors }}</div>
+    {% endif %}
+  </div>
+    {% endfor %}
+
+  <div class="form-group">
+    <button type="submit" class="reg-btn text-center">Create</button>
+  </div>
   </form>
+</div>
+{% endblock %}
+{% block sidebar %}
+  <div class="mt-5">
+    {% include "includes/clocks.html" %}
+  </div>
 {% endblock %}
